--- a/Rock_Paper_Scissors/styles.css
+++ b/Rock_Paper_Scissors/styles.css
@@ -31,9 +31,9 @@ h1 {
     background-color: rgb(255, 0, 34);
 }
 
-#playerDisplay, #computerDisplay {
+#playerDisplay, #counterDisplay {
     font-size: 2.5rem;
-    color: white;
+    color: rgb(33, 173, 238);
 }
 
 #resultDisplay {
@@ -43,10 +43,9 @@ h1 {
 }
 
 
-#counterDisplay, #lossDisplay {
-    font-size: 5rem;
-    margin: 30px 0;
-    color: white;
+#computerDisplay, #lossDisplay {
+    font-size: 2.5rem;
+    color: rgb(241, 40, 40);
 }
 
 
